<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    tools:context=".ui.fragments.BookFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/book_cover"
                    android:minWidth="160dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|top"
                    android:src="@drawable/cover_book" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/book_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="@string/test_title" />

                    <TextView
                        android:id="@+id/book_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="textStart"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp"
                        android:alpha="0.5"
                        tools:text="@string/test_author" />

                    <TextView
                        android:id="@+id/book_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textAlignment="textStart"
                        android:maxLines="6"
                        android:ellipsize="end"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp"
                        tools:text="@string/test_description" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/book_list_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginTop="5dp"
                            android:alpha="0.5"
                            android:textColor="?attr/colorOnPrimary"
                            android:textSize="14sp"
                            tools:text="@string/test_books_list" />
                    </FrameLayout>
                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/to_read_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/want_to_read"
                app:cornerRadius="2dp"
                app:strokeColor="?attr/colorOnPrimary"
                app:strokeWidth="2dp"/>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:alpha="0.5"
                android:background="?attr/colorOnPrimary"></View>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>